--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -11,7 +11,7 @@
   position: sticky;
   top: 0;
   z-index: 1000;
-  border-bottom: 2px solid var(--principal);
+  border-bottom: 2px solid #F8C8DC; /* Línea delgada rosa pastel */
 
   /* --- CAMBIO CLAVE 1: Convertimos el navbar en un contenedor flex --- */
   display: flex;
@@ -101,7 +101,7 @@
     background-color: #ffffff;
     padding: 0 1rem;
     box-shadow: 0 10px 15px rgba(0,0,0,0.1);
-    border-bottom: 2px solid var(--principal);
+    /* border-bottom: 2px solid var(--principal); */
   }
 
   .navbar-links.activo {
